[gd_scene load_steps=18 format=2]

[ext_resource path="res://textures/components/header/portrait.png" type="Texture" id=1]
[ext_resource path="res://textures/parchemin_600x600.png" type="Texture" id=2]
[ext_resource path="res://components/Carte.gd" type="Script" id=3]
[ext_resource path="res://textures/components/header/bcost.png" type="Texture" id=4]
[ext_resource path="res://themes/CardTheme.tres" type="Theme" id=5]
[ext_resource path="res://textures/components/header/white.png" type="Texture" id=6]
[ext_resource path="res://textures/components/header/bmarche.png" type="Texture" id=7]
[ext_resource path="res://font/ImmortalBlack.tres" type="DynamicFont" id=8]
[ext_resource path="res://textures/components/header/bcharge.png" type="Texture" id=10]
[ext_resource path="res://textures/components/header/bcourse.png" type="Texture" id=11]
[ext_resource path="res://textures/components/header/test.png" type="Texture" id=12]
[ext_resource path="res://textures/components/header/cac.png" type="Texture" id=13]
[ext_resource path="res://textures/button_plus.png" type="Texture" id=14]
[ext_resource path="res://textures/button_moins.png" type="Texture" id=15]
[ext_resource path="res://components/Button.tscn" type="PackedScene" id=16]

[sub_resource type="Theme" id=1]

[sub_resource type="Theme" id=2]

[node name="Carte" type="PanelContainer"]
anchor_left = 0.0416667
anchor_right = 0.909722
anchor_bottom = 0.101562
size_flags_horizontal = 3
theme = ExtResource( 5 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
modulate = Color( 0.858824, 0.858824, 0.858824, 1 )
show_behind_parent = true
margin_right = 678.0
margin_bottom = 130.0
size_flags_vertical = 3
texture = ExtResource( 2 )
patch_margin_left = 65
patch_margin_top = 65
patch_margin_right = 65
patch_margin_bottom = 65

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 678.0
margin_bottom = 130.0
mouse_filter = 1
custom_constants/margin_right = 20
custom_constants/margin_left = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_right = 658.0
margin_bottom = 130.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 638.0
margin_bottom = 130.0
rect_min_size = Vector2( 0, 130 )

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/Header"]
margin_right = 396.0
margin_bottom = 130.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Header/PanelContainer"]
margin_right = 396.0
margin_bottom = 130.0

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/VBoxContainer/Header/PanelContainer/HBoxContainer"]
margin_right = 30.0
margin_bottom = 130.0
rect_min_size = Vector2( 30, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Picture" type="TextureRect" parent="MarginContainer/VBoxContainer/Header/PanelContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 101.0
margin_bottom = 130.0
theme = SubResource( 1 )
texture = ExtResource( 1 )
stretch_mode = 6

[node name="BriefSummary" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Header/PanelContainer/HBoxContainer"]
margin_left = 105.0
margin_right = 396.0
margin_bottom = 130.0
size_flags_horizontal = 3
alignment = 1

[node name="UpperPart" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Header/PanelContainer/HBoxContainer/BriefSummary"]
margin_top = 32.0
margin_right = 291.0
margin_bottom = 63.0

[node name="Name" type="Label" parent="MarginContainer/VBoxContainer/Header/PanelContainer/HBoxContainer/BriefSummary/UpperPart"]
margin_right = 210.0
margin_bottom = 30.0
rect_min_size = Vector2( 210, 0 )
text = "Templier Avalonien"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/Header/PanelContainer/HBoxContainer/BriefSummary/UpperPart"]
margin_left = 214.0
margin_right = 218.0
margin_bottom = 31.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Header/PanelContainer/HBoxContainer/BriefSummary/UpperPart"]
margin_left = 222.0
margin_right = 252.0
margin_bottom = 31.0
rect_min_size = Vector2( 30, 0 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Cost" type="Label" parent="MarginContainer/VBoxContainer/Header/PanelContainer/HBoxContainer/BriefSummary/UpperPart"]
margin_left = 256.0
margin_right = 291.0
margin_bottom = 31.0
size_flags_vertical = 0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
text = ":33"
valign = 1

[node name="LowerPart" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Header/PanelContainer/HBoxContainer/BriefSummary"]
margin_top = 67.0
margin_right = 291.0
margin_bottom = 98.0

[node name="HealthBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Header/PanelContainer/HBoxContainer/BriefSummary/LowerPart"]
margin_bottom = 31.0
custom_constants/separation = 0

[node name="PA" type="ColorRect" parent="MarginContainer/VBoxContainer/Header/PanelContainer/HBoxContainer/BriefSummary/LowerPart"]
margin_left = 4.0
margin_right = 34.0
margin_bottom = 31.0
rect_min_size = Vector2( 30, 0 )
theme = SubResource( 2 )
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Header/PanelContainer/HBoxContainer/BriefSummary/LowerPart/PA"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "4"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Number" type="Label" parent="MarginContainer/VBoxContainer/Header/PanelContainer/HBoxContainer/BriefSummary/LowerPart"]
margin_left = 38.0
margin_right = 77.0
margin_bottom = 31.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 8 )
text = "6/6"

[node name="AddButton" type="TextureButton" parent="MarginContainer/VBoxContainer/Header"]
margin_left = 400.0
margin_right = 500.0
margin_bottom = 130.0
rect_min_size = Vector2( 100, 100 )
texture_normal = ExtResource( 15 )
expand = true
stretch_mode = 5

[node name="RemoveButton" type="TextureButton" parent="MarginContainer/VBoxContainer/Header"]
margin_left = 504.0
margin_right = 604.0
margin_bottom = 130.0
rect_min_size = Vector2( 100, 0 )
texture_normal = ExtResource( 14 )
expand = true
stretch_mode = 5

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/Header"]
margin_left = 608.0
margin_right = 638.0
margin_bottom = 130.0
rect_min_size = Vector2( 30, 0 )

[node name="Body" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
margin_top = 134.0
margin_right = 638.0
margin_bottom = 698.0

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/Body"]
margin_right = 638.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )
color = Color( 0.643137, 0.486275, 0, 1 )

[node name="Stats" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body"]
margin_top = 9.0
margin_right = 638.0
margin_bottom = 41.0
mouse_filter = 0
size_flags_horizontal = 3

[node name="ESP" type="PanelContainer" parent="MarginContainer/VBoxContainer/Body/Stats"]
margin_right = 58.0
margin_bottom = 32.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/Stats/ESP"]
margin_right = 58.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Body/Stats/ESP/HBoxContainer"]
margin_top = 9.0
margin_right = 22.0
margin_bottom = 23.0
text = "ESP"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Body/Stats/ESP/HBoxContainer"]
self_modulate = Color( 0.733333, 0.701961, 0.701961, 1 )
margin_left = 26.0
margin_right = 58.0
margin_bottom = 32.0
texture = ExtResource( 6 )

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/Body/Stats/ESP/HBoxContainer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 2.0
margin_right = 1.0
margin_bottom = 2.0
text = "00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/Body/Stats"]
margin_left = 62.0
margin_right = 185.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="COM" type="PanelContainer" parent="MarginContainer/VBoxContainer/Body/Stats"]
margin_left = 189.0
margin_right = 256.0
margin_bottom = 32.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/Stats/COM"]
margin_right = 67.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Body/Stats/COM/HBoxContainer"]
margin_top = 9.0
margin_right = 31.0
margin_bottom = 23.0
text = "COM"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Body/Stats/COM/HBoxContainer"]
self_modulate = Color( 0.533333, 0.14902, 0.14902, 1 )
margin_left = 35.0
margin_right = 67.0
margin_bottom = 32.0
texture = ExtResource( 6 )
flip_h = true

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/Body/Stats/COM/HBoxContainer/TextureRect"]
anchor_left = -0.03125
anchor_top = 0.0625
anchor_right = 0.96875
anchor_bottom = 1.0625
text = "00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/VBoxContainer/Body/Stats"]
margin_left = 260.0
margin_right = 384.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="DEF" type="PanelContainer" parent="MarginContainer/VBoxContainer/Body/Stats"]
margin_left = 388.0
margin_right = 448.0
margin_bottom = 32.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/Stats/DEF"]
margin_right = 60.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Body/Stats/DEF/HBoxContainer"]
margin_top = 9.0
margin_right = 24.0
margin_bottom = 23.0
text = "DEF"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Body/Stats/DEF/HBoxContainer"]
self_modulate = Color( 0.223529, 0.533333, 0.14902, 1 )
margin_left = 28.0
margin_right = 60.0
margin_bottom = 32.0
texture = ExtResource( 6 )
flip_v = true

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/Body/Stats/DEF/HBoxContainer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSeparator3" type="VSeparator" parent="MarginContainer/VBoxContainer/Body/Stats"]
margin_left = 452.0
margin_right = 575.0
margin_bottom = 32.0
size_flags_horizontal = 3

[node name="REF" type="PanelContainer" parent="MarginContainer/VBoxContainer/Body/Stats"]
margin_left = 579.0
margin_right = 637.0
margin_bottom = 32.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/Stats/REF"]
margin_right = 58.0
margin_bottom = 32.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Body/Stats/REF/HBoxContainer"]
margin_top = 9.0
margin_right = 22.0
margin_bottom = 23.0
text = "REF"

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Body/Stats/REF/HBoxContainer"]
self_modulate = Color( 0.14902, 0.435294, 0.533333, 1 )
margin_left = 26.0
margin_right = 58.0
margin_bottom = 32.0
texture = ExtResource( 6 )
flip_h = true
flip_v = true

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/Body/Stats/REF/HBoxContainer/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "00"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/Body"]
margin_top = 45.0
margin_right = 638.0
margin_bottom = 55.0
custom_constants/separation = 10

[node name="Mouvements" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body"]
margin_top = 59.0
margin_right = 638.0
margin_bottom = 159.0
mouse_filter = 0

[node name="Marche" type="PanelContainer" parent="MarginContainer/VBoxContainer/Body/Mouvements"]
margin_right = 112.0
margin_bottom = 100.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/Mouvements/Marche"]
margin_right = 112.0
margin_bottom = 100.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Body/Mouvements/Marche/HBoxContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/Body/Mouvements/Marche/HBoxContainer"]
margin_left = 104.0
margin_top = 43.0
margin_right = 112.0
margin_bottom = 57.0
text = "4"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/Body/Mouvements"]
margin_left = 116.0
margin_right = 259.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="Charge" type="PanelContainer" parent="MarginContainer/VBoxContainer/Body/Mouvements"]
margin_left = 263.0
margin_right = 375.0
margin_bottom = 100.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/Mouvements/Charge"]
margin_right = 112.0
margin_bottom = 100.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Body/Mouvements/Charge/HBoxContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/Body/Mouvements/Charge/HBoxContainer"]
margin_left = 104.0
margin_top = 43.0
margin_right = 112.0
margin_bottom = 57.0
text = "4"

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/VBoxContainer/Body/Mouvements"]
margin_left = 379.0
margin_right = 522.0
margin_bottom = 100.0
size_flags_horizontal = 3

[node name="Course" type="PanelContainer" parent="MarginContainer/VBoxContainer/Body/Mouvements"]
margin_left = 526.0
margin_right = 638.0
margin_bottom = 100.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/Mouvements/Course"]
margin_right = 112.0
margin_bottom = 100.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Body/Mouvements/Course/HBoxContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 11 )
expand = true
stretch_mode = 6

[node name="Value" type="Label" parent="MarginContainer/VBoxContainer/Body/Mouvements/Course/HBoxContainer"]
margin_left = 104.0
margin_top = 43.0
margin_right = 112.0
margin_bottom = 57.0
text = "4"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer/Body"]
margin_top = 163.0
margin_right = 638.0
margin_bottom = 173.0
custom_constants/separation = 10

[node name="CompétencesFormules" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body"]
margin_top = 177.0
margin_right = 638.0
margin_bottom = 300.0
mouse_filter = 0

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/Body/CompétencesFormules"]
margin_right = 150.0
margin_bottom = 123.0
rect_min_size = Vector2( 20, 0 )
size_flags_horizontal = 3

[node name="Competence" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Body/CompétencesFormules"]
margin_left = 154.0
margin_right = 305.0
margin_bottom = 123.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Body/CompétencesFormules/Competence"]
margin_right = 151.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Compétences:"
valign = 1

[node name="Value" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Body/CompétencesFormules/Competence"]
margin_top = 18.0
margin_right = 151.0
margin_bottom = 33.0
size_flags_horizontal = 3
bbcode_enabled = true
fit_content_height = true
scroll_active = false

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/VBoxContainer/Body/CompétencesFormules"]
margin_left = 309.0
margin_right = 329.0
margin_bottom = 123.0
rect_min_size = Vector2( 20, 0 )

[node name="Formules" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Body/CompétencesFormules"]
margin_left = 333.0
margin_right = 483.0
margin_bottom = 123.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Body/CompétencesFormules/Formules"]
margin_right = 150.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "Formules:"
valign = 1

[node name="Value" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Body/CompétencesFormules/Formules"]
margin_top = 18.0
margin_right = 150.0
margin_bottom = 123.0
size_flags_horizontal = 3
text = "qsdqsdqsdqsdqsdqsdqsdqsddsfsdfsdfsdfsdfsdfsdfdsfsdfsdfsdfsdfsdf
qsd
qs
dqs
d"
fit_content_height = true
scroll_active = false

[node name="VSeparator3" type="VSeparator" parent="MarginContainer/VBoxContainer/Body/CompétencesFormules"]
margin_left = 487.0
margin_right = 638.0
margin_bottom = 123.0
rect_min_size = Vector2( 20, 0 )
size_flags_horizontal = 3

[node name="HSeparator3" type="HSeparator" parent="MarginContainer/VBoxContainer/Body"]
margin_top = 304.0
margin_right = 638.0
margin_bottom = 314.0
custom_constants/separation = 10

[node name="TableDegats" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Body"]
margin_top = 318.0
margin_right = 638.0
margin_bottom = 432.0
mouse_filter = 0

[node name="Cac" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/TableDegats"]
margin_right = 638.0
margin_bottom = 55.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Body/TableDegats/Cac"]
margin_left = 168.0
margin_right = 193.0
margin_bottom = 55.0
texture = ExtResource( 13 )
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/Body/TableDegats/Cac"]
margin_left = 197.0
margin_right = 469.0
margin_bottom = 55.0
texture = ExtResource( 12 )

[node name="Dist" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body/TableDegats"]
margin_top = 59.0
margin_right = 638.0
margin_bottom = 114.0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/Body/TableDegats/Dist"]
margin_left = 168.0
margin_right = 193.0
margin_bottom = 55.0
texture = ExtResource( 13 )
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer/Body/TableDegats/Dist"]
margin_left = 197.0
margin_right = 469.0
margin_bottom = 55.0
texture = ExtResource( 12 )

[node name="HSeparator4" type="HSeparator" parent="MarginContainer/VBoxContainer/Body"]
margin_top = 436.0
margin_right = 638.0
margin_bottom = 446.0
custom_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Body"]
margin_top = 450.0
margin_right = 638.0
margin_bottom = 495.0

[node name="VSeparator2" type="VSeparator" parent="MarginContainer/VBoxContainer/Body/HBoxContainer"]
margin_right = 235.0
margin_bottom = 45.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" parent="MarginContainer/VBoxContainer/Body/HBoxContainer" instance=ExtResource( 16 )]
margin_left = 239.0
margin_top = 0.0
margin_right = 399.0
margin_bottom = 45.0
label = "Voir la carte"

[node name="VSeparator" type="VSeparator" parent="MarginContainer/VBoxContainer/Body/HBoxContainer"]
margin_left = 403.0
margin_right = 638.0
margin_bottom = 45.0
size_flags_horizontal = 3

[node name="HSeparator5" type="HSeparator" parent="MarginContainer/VBoxContainer/Body"]
margin_top = 499.0
margin_right = 638.0
margin_bottom = 564.0
rect_min_size = Vector2( 0, 65 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[connection signal="gui_input" from="MarginContainer/VBoxContainer/Header/PanelContainer" to="." method="_on_PanelContainer_gui_input"]
